--- a/src/locales/fr/homepage.json
+++ b/src/locales/fr/homepage.json
@@ -2,8 +2,9 @@
     "hero": {
         "title": "Je suis Vanessa.", 
         "title-flipped" : "Développeuse Web.",
-        "text1" : "Basée à Vancouver, en Colombie-Britannique.", 
-        "text2" : "Je crée des applications et des sites web full-stack qui connectent les entreprises avec leur clientèle cible grâce à des solutions numériques efficaces et sur mesure.", 
+        "text1" : "Basée à Vancouver en Colombie-Britannique.", 
+        "text2" : "Je me spécialise dans la création d'applications et de sites web qui connectent les entreprises avec leur clientèle cible grâce à des solutions numériques efficaces et sur mesure.",
+        "text3" : "Grâce à mon expertise en marketing, j’assure une expérience utilisateur cohérente, fluide et fidèle à votre image—en ligne comme en personne.", 
         "button" : "Donnons vie à votre projet!"
     },
     "toolbox" : {
@@ -66,13 +67,13 @@
             "item3-reg" : "Résolution de problème", 
             "item4-bold" : "Bilingue", 
             "item4-reg" : "FR | EN", 
-            "tagline" : "Créer des designs beaux, adaptatifs et intentionnels", 
-            "coding1" : " Je suis une personne active et passionnée de plein air qui a récemment découvert une passion pour la programmation.", 
-            "coding2" : " Pour moi, c’est une forme d’art — un moyen de créer des expériences numériques visuellement attrayantes, adaptatives et conviviales. J’apporte de la créativité et une grande attention aux détails dans chaque projet, afin que le produit final reflète réellement la vision de mes client·e·s.", 
+            "tagline" : "Ma Mission: Des interfaces soignées, adaptatives et réfléchies", 
+            "coding1" : "J’aborde le développement web comme une discipline créative et stratégique.", 
+            "coding2" : "Je conçois des expériences numériques esthétiques, flexibles et centrées sur l’utilisateur, avec un souci du détail qui garantit que chaque projet reflète fidèlement la vision de mes client·e·s.", 
             "approach": "Visitez mon GitHub" 
         }, 
         "not-coding" : {
-            "title" : "Quand je ne suis pas en train de coder...", 
-            "text" : "Une image vaut mille mots."
+            "title" : "Parce qu'une image vaut mille mots. ", 
+            "text" : "L’endurance, la persévérance et l’esprit d’aventure façonnent ma façon de penser : orientée vers les objectifs, ancrée dans la rigueur, toujours prête à relever le prochain défi."
         }
 }
