--- a/src/locales/fr/homepage.json
+++ b/src/locales/fr/homepage.json
@@ -74,6 +74,6 @@
         }, 
         "not-coding" : {
             "title" : "Parce qu'une image vaut mille mots. ", 
-            "text" : "L’endurance, la persévérance et l’esprit d’aventure façonnent ma façon de penser : orientée vers les objectifs, ancrée dans la rigueur, toujours prête à relever le prochain défi."
+            "text" : "L’endurance, la persévérance et l’esprit d’aventure façonnent ma vie et mon attitude au travail : orientée vers les objectifs, ancrée dans la rigueur, toujours prête à relever le prochain défi."
         }
 }
