unify margin and add details to about me section

--- a/src/locales/fr/homepage.json
+++ b/src/locales/fr/homepage.json
@@ -74,6 +74,7 @@
         }, 
         "not-coding" : {
             "title" : "Parce qu'une image vaut mille mots. ", 
-            "text" : "L’endurance, la persévérance et l’esprit d’aventure façonnent ma vie et mon attitude au travail : orientée vers les objectifs, ancrée dans la rigueur, toujours prête à relever le prochain défi."
+            "text" : "L’endurance, la persévérance et l’esprit d’aventure façonnent ma vie autant que mon attitude au travail : orientée vers les objectifs, ancrée dans la rigueur, et toujours prête à relever le prochain défi.", 
+            "text2": "Ma passion du plein air m’inspire une profonde appréciation du mouvement, de l’adaptabilité et du dépassement de soi. C’est cette même énergie qui alimente ma démarche professionnelle : rester concentrée sous pression, accueillir le changement et toujours viser l’excellence."
         }
 }
