--- a/src/locales/fr/resume.json
+++ b/src/locales/fr/resume.json
@@ -44,8 +44,8 @@
                 "title" : "Assistante-gérante", 
                 "employer" : "Mission Springs Group", 
                 "date" : "JANV. 2017 - AOÛT 2017, MISSION, C.-B.", 
-                "experience1" : "Supervision d’une équipe de plus de 20 employé·es à l’avant-scène et mise en place de protocoles de service pour améliorer la satisfaction des client·es.", 
-                "experience2" : "Coordination des opérations en salle et en cuisine lors d’événements et de groupes, assurant un déroulement efficace et sans accroc.", 
+                "experience1" : "Supervision et formation d’une équipe de plus de 20 employé·es à l’avant-scène et mise en place de protocoles de service pour améliorer la satisfaction des client·es.", 
+                "experience2" : "Coordination des opérations en salle et en cuisine lors d’événements et de groupes, assurant un déroulement efficace et sans interuption.", 
                 "skill1" : "Travail d’équipe", 
                 "skill2" : "Gestion multitâche", 
                 "skill3" : "Documentation", 
