--- a/src/locales/en/homepage.json
+++ b/src/locales/en/homepage.json
@@ -74,6 +74,7 @@
         }, 
         "not-coding" : {
             "title" : "A picture is worth a thousand words.", 
-            "text" : "Endurance, perseverance, and the spirit of adventure shape my mindset: goal-oriented, grounded in discipline, and always ready to tackle the next challenge."
+            "text" : "Endurance, perseverance, and the spirit of adventure shape my life and mindset: goal-oriented, grounded in discipline, and always ready to tackle the next challenge.", 
+            "text2" : "My love for the outdoors inspires a deep appreciation for momentum, adaptability, and pushing beyond limits. It’s this same energy that drives my approach to work: staying focused under pressure, embracing change, and always striving to go the extra mile."
         }
 }
